feat(grafana): add dashboard templates
